--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,9 @@
 Style/LambdaCall:
   EnforcedStyle: braces
 
+Style/FrozenStringLiteralComment:
+  EnforcedStyle: always
+
 Style/Documentation:
   Enabled: false
 
