--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ rvm:
   - 2.4.3
   - 2.5.0
   - ruby-head
-before_install: gem install bundler -v 1.16.1
+before_install:
+  - gem update --system
+  - gem install bundler -v 1.16.2
