Fix rubocop offences.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,9 @@ Style/FrozenStringLiteralComment:
 Style/Documentation:
   Enabled: false
 
+Naming/UncommunicativeMethodParamName:
+  Enabled: false
+
 Metrics/LineLength:
   Max: 100
 
